fixed units overflow

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body{
 
 .level{
     border-bottom: 1px solid #ddd;
+    /* max-width: 400px; */
 }
 
 .level:last-child{
@@ -59,7 +60,6 @@ body{
     padding: 0 0 15px 0;
     position: relative;
     min-width: 300px;
-    /* background-color: rgb(180, 81, 81); */
 }
 
 .level-header .level-toggle{
@@ -126,10 +126,12 @@ body{
     margin: 0;
     overflow: hidden;
     transition: max-height 0.5s ease, opacity 0.4s ease;
+    flex-wrap: wrap;
 }
 
 .level-header.show + .level-body{
-    max-height: 200px;
+    max-height: 1000px;
+
     opacity: 1;
 }
 
@@ -147,7 +149,6 @@ body{
 .unit{
     cursor: pointer;
     width: 160px;
-
 }
 
 .svg-container{
